Added forEach example

--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -6,6 +6,7 @@
 
   <body>
     <button id="lol">Trigger</button>
+    <div id="result"></div>
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
