--- a/js_oop/index.html
+++ b/js_oop/index.html
@@ -5,6 +5,8 @@
   </head>
 
   <body>
+    <button id="rollButton">Roll</button>
+    <div id="result"></div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
